--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.4.3",
+    "node-sass": "^4.13.0",
+    "qrcode": "^1.4.4",
+    "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
@@ -33,7 +36,10 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off",
+      "vue/no-use-v-if-with-v-for": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
