--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "imgapp",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@cmdparkour/vue-imgview",
+  "version": "0.1.1",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
