切换成组件演示

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@cmdparkour/vue-imgview",
-  "version": "0.1.1",
+  "name": "imgapp",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
